build_error.log
[  1%] Building CXX object CMakeFiles/SongbirdPlayer.dir/app/BirdLoader.cpp.o
In file included from /Users/Ashu/Code/songbird-chirp/app/BirdLoader.cpp:4:
/Users/Ashu/Code/songbird-chirp/libraries/sequencing/utils/time_constants.h:150:2: warning: extra ';' outside of a function is incompatible with C++98 [-Wc++98-compat-extra-semi]
  150 | };
      |  ^
/Users/Ashu/Code/songbird-chirp/app/BirdLoader.cpp:631:29: warning: implicit conversion changes signedness: 'std::tuple_element<1, std::pair<const std::string, int>>::type' (aka 'int') to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  631 |             result.channels[idx].name = name;
      |             ~~~~~~          ^~~
/Users/Ashu/Code/songbird-chirp/app/BirdLoader.cpp:632:29: warning: implicit conversion changes signedness: 'std::tuple_element<1, std::pair<const std::string, int>>::type' (aka 'int') to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  632 |             result.channels[idx].channel = idx;
      |             ~~~~~~          ^~~
/Users/Ashu/Code/songbird-chirp/app/BirdLoader.cpp:673:59: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  673 |                 auto& targetCh = result.channels[orderIt->second];
      |                                  ~~~~~~          ~~~~~~~~~^~~~~~
/Users/Ashu/Code/songbird-chirp/app/BirdLoader.cpp:1088:30: error: no member named 'getPluginDescription' in 'tracktion::ExternalPlugin'
 1088 |                     if (ext->getPluginDescription().name.containsIgnoreCase(fx.pluginName)) {
      |                         ~~~  ^
/Users/Ashu/Code/songbird-chirp/app/BirdLoader.cpp:1135:52: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
 1135 |             auto& parsedCh = parseResult->channels[t];
      |                              ~~~~~~~~~~~           ^
/Users/Ashu/Code/songbird-chirp/app/BirdLoader.cpp:1205:52: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
 1205 |             auto& parsedCh = parseResult->channels[t];
      |                              ~~~~~~~~~~~           ^
6 warnings and 1 error generated.
make[2]: *** [CMakeFiles/SongbirdPlayer.dir/app/BirdLoader.cpp.o] Error 1
make[1]: *** [CMakeFiles/SongbirdPlayer.dir/all] Error 2
make: *** [all] Error 2
